--- a/_config.yml
+++ b/_config.yml
@@ -9,37 +9,37 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Kuala_Lumpur
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Rudzainy Rahman # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Solving real world problems using design, technology and empathy # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://www.rudzainy.my"
 
 github:
-  username: github_username # change to your github username
+  username: rudzainy # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: rudzainy # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Rudzainy Rahman
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/rudzainy # change to your twitter homepage
+    - https://github.com/rudzainy # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -113,6 +113,21 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
+
+jekyll_compose:
+  default_front_matter:
+    drafts:
+      description:
+      image:
+      category:
+      tags:
+    posts:
+      description:
+      image:
+      category:
+      tags:
+      published: false
+      sitemap: false
 
 # ------------ The following options are not recommended to be modified ------------------
 
