--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Asia/Kuala_Lumpur
 
 title: Rudzainy Rahman # the main title
 
-tagline: Solving real world problems using design, technology and empathy # it will display as the sub-title
+tagline: Solving real world problems using design, technology and empathy.  # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Personal website of Rudzainy Rahman
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Rudzainy Rahman
-  email: example@domain.com # change to your email address
+  email: hello@rudzainy.my # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://twitter.com/rudzainy # change to your twitter homepage
