--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ social:
     - https://twitter.com/rudzainy # change to your twitter homepage
     - https://github.com/rudzainy # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.facebook.com/rudzainy.rahman
+    - https://www.linkedin.com/in/rudzainy
 
 google_site_verification: # fill in to your verification string
 
@@ -109,7 +109,7 @@ assets:
 pwa:
   enabled: true # the option for PWA feature
 
-paginate: 10
+paginate: 13 # random odd prime number
 
 # The base URL of your site
 baseurl: ""
